<resources>
    <string name="app_name" translatable="false">Rapility</string>
    <string name="txtView_color">Colors</string>
    <string name="txtView_sound">Sounds</string>
    <string name="txtView_picture">Pictures</string>
    <string name="txtView_delay_min">Minimum time</string>
    <string name="txtView_delay_max">Maximum time</string>
    <string name="txtView_time_show">Vision time</string>
    <string name="txtViewHint_delay_min">milliseconds</string>
    <string name="default_value_delay_min" translatable="false">2000</string>
    <string name="default_value_delay_max" translatable="false">3000</string>
    <string name="default_value_time_show" translatable="false">500</string>
    <string name="title_activity_show_signal" translatable="false">ShowSignal</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="imgView_content_description">Pictures</string>
    <string name="item_info_title" translatable="false">Info</string>
    <string name="txtViewInfo_sound_desc">È possibile attivare fino a 4 differenti suoni.</string>
    <string name="txtViewInfo_showTime_desc">Questo parametro stabilisce per quanti millisecondi il segnale rimarrà visibile sullo schermo.\nAd esempio, inserendo 1000 l\'immagine o il colore rimarranno visibili per un secondo, prima di essere cancellati.</string>
    <string name="txtViewInfo_picture_desc">È possibile attivare fino a 5 differenti immagini.</string>
    <string name="txtViewInfo_delayMin_desc">Questo parametro stabilisce il tempo minimo, in millisecondi, tra un segnale e l\'altro.\nSe \"Tempo minimo\" e \"Tempo massimo\" risultano differenti, allora si calcolerà un tempo random differente tra un segnale e l\'altro.\nSe \"Tempo minimo\" e \"Tempo massimo\" risultano uguali, allora si calcolerà un tempo costante per tutta la durata della sessione.</string>
    <string name="txtViewInfo_delayMax_desc">Questo parametro stabilisce il tempo massimo, in millisecondi, tra un segnale e l\'altro.\nSe \"Tempo minimo\" e \"Tempo massimo\" risultano differenti, allora si calcolerà un tempo random differente tra un segnale e l\'altro.\nSe \"Tempo minimo\" e \"Tempo massimo\" risultano uguali, allora si calcolerà un tempo costante per tutta la durata della sessione.</string>
    <string name="txtViewInfo_color_desc">È possibile attivare fino a 5 differenti colori.</string>
    <string name="txtView_dev_info">App designed and developed by Andrea Rota</string>
    <string name="color_red">Red</string>
    <string name="color_blue">Blue</string>
    <string name="color_green">Green</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_gray">Gray</string>
    <string name="sound_0">Short Beep</string>
    <string name="sound_1">Long Beep</string>
    <string name="sound_2">Double Short Beep</string>
    <string name="sound_4">Long Boop</string>
    <string name="pictures_0">Circle</string>
    <string name="picture_1">Square</string>
    <string name="picture_2">Triangle</string>
    <string name="picture_3">Star</string>
    <string name="picture_4">Snowflake</string>
    <string name="count_input">"Selected input(s): "</string>
    <string name="count_inputs_number_default" translatable="false">0</string>
    <string name="com.kluhpas.KummerProject.LAST_PREFERENCE" translatable="false">com.kluhpas.KummerProject.LAST_PREFERENCE</string>
    <string name="error_lower">must be less than or equal to</string>
    <string name="error_greater">must be greater than or equal to</string>
    <string name="error_zero_showTime">must be greater than zero</string>
    <string name="txtView_work_time">Work time</string>
    <string name="txtView_rest_time">Rest time</string>
    <string name="txtView_title_timer_settings">Timer settings</string>
    <string name="txtView_title_signal_settings">Signal settings</string>
    <string name="txtView_sets">Number of sets</string>
    <string name="txtViewHint_seconds">seconds</string>
    <string name="default_value_work_time" translatable="false">40</string>
    <string name="default_value_rest_time" translatable="false">20</string>
    <string name="default_value_sets" translatable="false">0</string>
    <string name="txtViewHint_cicles">0 = infinite</string>
    <string name="error_empty">can\'t be empty</string>
    <string name="txtView_timer" translatable="false">Timer</string>
    <string name="btn_title_add_profile">Add</string>
    <string name="btn_title_delete_profile">Delete</string>
    <string name="feedback" translatable="false">Feedback</string>
    <string name="time_left_title">"time: "</string>
    <string name="sets_left_title">"sets: "</string>
    <string name="title_dialog_save_config">Save configuration</string>
    <string name="message_dialog_save_config">Give it a name</string>
    <string name="positiveButton_add_dialog">Save</string>
    <string name="negativeButton_dialog">Cancel</string>
    <string name="hint_dialog_input_config">Write</string>
    <string name="title_default_config">Default Config</string>
    <string name="positiveButton_del_dialog">Delete</string>
    <string name="title_dialog_delete_config">Delete configuration</string>
    <string name="message_dialog_delete_update_config">Select the configuration</string>
    <string name="btn_title_update_profile">Update</string>
    <string name="title_stats_item">Statistics</string>
    <string name="error_multiple_name">This name is already used</string>
    <string name="error_string_empty">It can\'t be empty</string>
    <string name="start">START</string>
    <string name="title_dialog_update_config">Update configuration</string>
</resources>
