<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Info">

    <ScrollView
        android:id="@+id/scrlViewInfo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrlViewInfo">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/txtView_color"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:singleLine="false"
                android:text="@string/txtViewInfo_color_desc"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="40dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/txtView_sound"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="47dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/txtViewInfo_sound_desc"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="47dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/txtView_picture"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="47dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/txtViewInfo_picture_desc"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="47dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/txtView_delay_min"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="47dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/txtViewInfo_delayMin_desc"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="47dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/txtView_delay_max"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="47dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/txtViewInfo_delayMax_desc"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="47dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/txtView_time_show"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="440dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/txtViewInfo_showTime_desc"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="47dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:autoLink="email"
                android:text="@string/txtView_dev_info"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="italic"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="440dp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>